# berialdraw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  berialdraw.sln  build_linux.sh  claude.md  conanfile.py  install_linux.sh  install_vscode_linux.sh  save_berialdraw.py
berialdraw/: CMakeLists.txt  CMakeUserPresets.json  app_sample.vcxproj  app_unitary_test.vcxproj  app_unitary_test.vcxproj.filters  berialdraw.sln  build.sh  install_linux.sh  install_vscode_linux.sh  library.vcxproj  library.vcxproj.filters  samples.vcxproj  samples.vcxproj.filters
berialdraw/builds/vs2019/: app_sample.filters  app_sample.vcxproj  app_unitary_test.vcxproj  app_unitary_test.vcxproj.filters  library.vcxproj  library.vcxproj.filters  pyberialdraw.vcxproj  pyberialdraw.vcxproj.filters  samples.vcxproj  samples.vcxproj.filters
berialdraw/doc/: build_doc.py
berialdraw/doc/html/: __font_8hpp_source.html  berialdraw_8hpp_source.html  berialdraw__imp_8hpp_source.html  check__event_8hpp_source.html  classberialdraw_1_1_area.html  classberialdraw_1_1_argb8888.html  classberialdraw_1_1_border_style.html  classberialdraw_1_1_button-members.html  classberialdraw_1_1_callable-members.html  classberialdraw_1_1_callable.html  classberialdraw_1_1_canvas.html  classberialdraw_1_1_circle.html  classberialdraw_1_1_click_event.html  classberialdraw_1_1_colors-members.html  classberialdraw_1_1_column.html  classberialdraw_1_1_compass.html  classberialdraw_1_1_cross.html  classberialdraw_1_1_data_set.html  classberialdraw_1_1_desktop.html  classberialdraw_1_1_device-members.html  classberialdraw_1_1_device_sdl.html  classberialdraw_1_1_directory-members.html  classberialdraw_1_1_directory.html  classberialdraw_1_1_edit_style-members.html  classberialdraw_1_1_event-members.html  classberialdraw_1_1_event.html  classberialdraw_1_1_font_face.html  classberialdraw_1_1_framebuf-members.html  classberialdraw_1_1_framebuf.html  classberialdraw_1_1_grid.html  classberialdraw_1_1_icon-members.html  classberialdraw_1_1_icon.html  classberialdraw_1_1_icon_style.html  classberialdraw_1_1_invalidator-members.html  classberialdraw_1_1_item-members.html  classberialdraw_1_1_item_array-members.html  classberialdraw_1_1_item_array.html  classberialdraw_1_1_item_bool-members.html  classberialdraw_1_1_item_bool.html  classberialdraw_1_1_item_collection.html  (+153 more)
berialdraw/inc/: berialdraw.hpp  berialdraw.i  berialdraw.py  berialdraw_imp.hpp  berialdraw_wrap.cxx  config.h
berialdraw/inc/chart/: data_set.hpp  line_chart.hpp
berialdraw/inc/device/: clipboard_cocoa.hpp  clipboard_sdl.hpp  clipboard_wayland.hpp  device.hpp  device_cocoa.hpp  device_sdl.hpp  device_wayland.hpp  device_win32.hpp
berialdraw/inc/event/: caller.hpp  check_event.hpp  click_event.hpp  event.hpp  focus_event.hpp  key_event.hpp  notifier.hpp  scroll_event.hpp  select_event.hpp  slide_event.hpp  touch_event.hpp
berialdraw/inc/font/: _font.hpp  font.hpp  font_face.hpp  fonts.hpp  glyph.hpp  glyphs.hpp  utf8.hpp
berialdraw/inc/framebuf/: argb8888.hpp  framebuf.hpp
berialdraw/inc/shape/: circle.hpp  compass.hpp  cross.hpp  line.hpp  marker.hpp  outline.hpp  pie.hpp  poly_lines.hpp  poly_points.hpp  polygon.hpp  rect.hpp  renderer.hpp  shape.hpp  sketch.hpp  square.hpp  text.hpp  text_box.hpp  triangle.hpp  vectors_script.hpp
berialdraw/inc/styles/: border_style.hpp  cell_style.hpp  cells_style.hpp  checkbox_style.hpp  color.hpp  colors.hpp  common_style.hpp  edit_style.hpp  icon_style.hpp  invalidator.hpp  keys.hpp  line_style.hpp  mappings.hpp  pie_style.hpp  progress_bar_style.hpp  radio_style.hpp  round_style.hpp  (+12 more)
berialdraw/pybind/: CMakeLists.txt  test.av.py  test.py  test_mac.py
berialdraw/samples/: CMakeLists.txt  dialog.cpp  dialog.hpp  icon_menu_dialog.cpp  icon_menu_dialog.hpp  main.cpp  menu_dialog.cpp  menu_dialog.hpp  sample_canvas.cpp  sample_column.cpp  sample_grid.cpp  sample_hello_world.cpp  sample_icon.cpp  sample_keyboard.cpp  sample_progress_bar.cpp  sample_row.cpp  sample_scrollview.cpp  sample_slider.cpp  sample_speedometer.cpp  sample_switch.cpp  sample_theme.cpp  sample_window.cpp  samples.cpp  samples.hpp  samples_widgets.cpp
berialdraw/scripts/: svg2icn.py
berialdraw/src/: main.cpp
berialdraw/test/: check.py  screens_crc.json
doc/: CMakeLists.txt  doxygen.dox
doc/html/: align_8hpp_source.html  annotated.html  area_8hpp_source.html  argb8888_8hpp_source.html  border__style_8hpp_source.html  button_8hpp_source.html  caller_8hpp_source.html  canvas_8hpp_source.html  cells_8hpp_source.html  circle_8hpp_source.html  classberialdraw_1_1_area-members.html  classberialdraw_1_1_argb8888-members.html  classberialdraw_1_1_border_style-members.html  classberialdraw_1_1_button.html  classberialdraw_1_1_canvas-members.html  classberialdraw_1_1_check_event-members.html  classberialdraw_1_1_check_event.html  classberialdraw_1_1_circle-members.html  classberialdraw_1_1_click_event-members.html  classberialdraw_1_1_colors.html  classberialdraw_1_1_column-members.html  classberialdraw_1_1_common_style-members.html  classberialdraw_1_1_common_style.html  classberialdraw_1_1_compass-members.html  classberialdraw_1_1_cross-members.html  classberialdraw_1_1_data_set-members.html  classberialdraw_1_1_desktop-members.html  classberialdraw_1_1_device.html  classberialdraw_1_1_device_sdl-members.html  classberialdraw_1_1_device_win32-members.html  classberialdraw_1_1_device_win32.html  classberialdraw_1_1_edit-members.html  classberialdraw_1_1_edit.html  classberialdraw_1_1_edit_style.html  classberialdraw_1_1_exporter-members.html  classberialdraw_1_1_exporter.html  classberialdraw_1_1_file-members.html  classberialdraw_1_1_file.html  classberialdraw_1_1_font-members.html  classberialdraw_1_1_font.html  (+208 more)
samples/: CMakeLists.txt  dialog.cpp  icon_menu_dialog.hpp  main.cpp  menu_dialog.hpp  sample_button.cpp  sample_edit.cpp  sample_forms.cpp  sample_hello_world.cpp  sample_imp.cpp  sample_label.cpp  sample_pane.cpp  sample_picture.cpp  sample_scrollview.cpp  sample_speedometer.cpp  sample_tableview.cpp  samples.cpp  samples.hpp
(+980 files in other folders)
